--- a/visit.html
+++ b/visit.html
@@ -45,7 +45,7 @@
             <a href="explore.html">Explore</a>
             <a href="exhibition.html">Exhibitions</a>
             <a href="events.html">Events</a>
-            <a href="visit.html">Visit</a>
+            <a href="visit.html" id="active">Visit</a>
             <a href="getinvolved.html">Get Involved</a>
           </nav>
         </div>
@@ -200,7 +200,7 @@
           </div>
         </form>
       </div>
-      <div class="back-to-top-button">
+      <div class="back-to-top-button imagehov">
         <a href="#back-to-top">
           <img
             src="Images/Design/Back-to-the-top-Button.png"
