--- a/index.html
+++ b/index.html
@@ -174,11 +174,11 @@
               <p>+47 987 65 432</p>
             </div>
             <div class="footer-contact-icon">
-              <img src="Images/Icons/mail-icon.svg" alt="Mail icon" />
+              <img src="Images/Icons/mail-icon.png" alt="Mail icon" />
               <p>fictional@bcsm.com</p>
             </div>
             <div class="footer-contact-icon">
-              <img src="Images/Icons/location-icon.svg" alt="Location icon" />
+              <img src="Images/Icons/location-icon.png" alt="Location icon" />
               <p>Fictional Street 1, 8907 Brønnøysund</p>
             </div>
           </div>
@@ -189,9 +189,9 @@
             />
           </div>
           <div class="footer3">
-            <img src="Images/Icons/facebook-icon.svg" alt="Facebook Icon" />
-            <img src="Images/Icons/instagram-icon.svg" alt="Instagram Icon" />
-            <img src="Images/Icons/youtube-icon.svg" alt="Youtube Icon" />
+            <img src="Images/Icons/facebook-icon.png" alt="Facebook Icon" />
+            <img src="Images/Icons/instagram-icon.png" alt="Instagram Icon" />
+            <img src="Images/Icons/youtube-icon.png" alt="Youtube Icon" />
           </div>
         </div>
         <p class="copy">©SP1 SL23</p>
