--- a/events.html
+++ b/events.html
@@ -27,7 +27,7 @@
   <body>
     <header>
       <div class="wrapper">
-        <div class="header-section">
+        <section class="header-section">
           <div class="header-logo">
             <img
               src="Images/Design/Logo.png"
@@ -48,7 +48,7 @@
             <a href="visit.html">Visit</a>
             <a href="getinvolved.html">Get Involved</a>
           </nav>
-        </div>
+        </section>
       </div>
     </header>
     <main>
@@ -62,59 +62,59 @@
       <section class="green-background">
         <div class="wrapper">
           <div class="container">
-            <div class="image">
+            <figure class="image">
               <img
                 src="Images/Events/events-professor-min.jpg"
                 alt="Picture of professor of aeronautics Prof Sheila Widnall"
                 />
-            </div>
-            <div class="text">
+            </figure>
+            <article class="text">
               <h3>Visiting Professor of Aeronautics</h3>
               <p>It is our pleasure to announce that Prof Sheila Widnall from the Massachusetts Institute of Technology will be delivering 3 lectures on the development of aeronautics and where the future lies in this exciting ‘space’.</p>
-            </div>
+            </article>
           </div>
         </div>
       </section>
       <section class="site-background">
         <div class="wrapper">
           <div class="container">
-            <div class="text">
+            <article class="text">
               <h3>Night in the Museum</h3>
               <p>Get your family together for an exciting night in the museum as you sleep over beside dinosaurs and science displays. Bring your own sleeping bag and get ready to rough it as we go exploring the wonders of science.</p>
-            </div>
-            <div class="image">
+            </article>
+            <figure class="image">
               <img
               src="Images/Events/events_night-at-the-museum-min.png"
               alt="Picture of a man sitting in a museum hall"
               />
-            </div>
+            </figure>
           </div>
         </div>
       </section>
       <section class="green-background">
         <div class="wrapper">
           <div class="container">
-            <div class="image">
+            <figure class="image">
               <img
                 src="Images/Events/events-lightning-min.jpg"
                 alt="Picture of a ball of lightning"
                 />
-            </div>
-            <div class="text">
+            </figure>
+            <article class="text">
               <h3>Energetica Exhibition on Loan</h3>
               <p>On loan from the NEMO Science Museum in Amsterdam, the Energetica exhibition is coming to the Community Science Museum. It’s a series of installations that allow visitors to experience the power of the elements as we harness them. From solar energy powering lighting, to ‘Wind Island’ that shows how turbines are able to use and control wind to create power.</p>
-            </div>
+            </article>
           </div>
         </div>
       </section>
-        <div class="back-to-top-button imagehov"> 
+        <figure class="back-to-top-button imagehov"> 
           <a href="#back-to-top">
             <img
               src="Images/Design/Back-to-the-top-Button.png"
               alt="Back to the top button"
             />
           </a>
-        </div>
+        </figure>
       </div>
     </main>
     <footer>
