--- a/exhibition.html
+++ b/exhibition.html
@@ -27,7 +27,7 @@
   <body>
     <header>
       <div class="wrapper">
-        <div class="header-section">
+        <section class="header-section">
           <div class="header-logo">
             <img
               src="Images/Design/Logo.png"
@@ -48,7 +48,7 @@
             <a href="visit.html">Visit</a>
             <a href="getinvolved.html">Get Involved</a>
           </nav>
-        </div>
+        </section>
       </div>
     </header>
     <main>
@@ -71,22 +71,22 @@
         </div>
       </section>
       <div class="wrapper">
-        <div class="divider dt">
+        <figure class="divider dt">
           <img
             src="Images/Design/Cosmology-Skille.png"
             alt="Divider with planet icon"
             id="cosmology"
           />
           <h2>Cosmology</h2>
-        </div>
+        </figure>
         <section class="container iandt">
-          <div class="image">
+          <figure class="image">
             <img
               src="Images/Exhibition/exhibitions_cosmology-min.jpg"
               alt="Picture showing the night sky with a swirl of stars"
             />
-          </div>
-          <div class="textfield-dark-green cost">
+          </figure>
+          <article class="textfield-dark-green cost">
             <p>
               Explore the wonders of our cosmos. Our fantastic exhibition, ‘The
               Sky Above Us’, explores the night sky and what we can see and know
@@ -99,18 +99,18 @@
               traders, to Galileo’s telescope, to the latest exploration of the
               planets in our solar system.
             </p>
-          </div>
+          </article>
         </section>
-        <div class="divider dt">
+        <figure class="divider dt">
           <img
             src="Images/Design/Evolution-skille.png"
             alt="Divider with evolution icon"
             id="evolution"
           />
           <h2>Evolution</h2>
-        </div>
+        </figure>
         <section class="container iandt">
-          <div class="textfield-dark-green evot">
+          <article class="textfield-dark-green evot">
             <p>
               For centuries, philosophers and scientists have wrestled with the
               question of our origins. Where do we come from and how did we get
@@ -122,49 +122,49 @@
               alt="Icon showing evolution"
               class="evot-icon"
             />
-          </div>
-          <div class="textfield-dark-green evot">
+          </article>
+          <article class="textfield-dark-green evot">
             <p>
               Discover the origins of life on this planet and how the species we
               know today have evolved our time. You can also take some time to
               meet a few of the creatures who didn’t survive, including our
               Woolly Mammoth, the Dodos, and a number of dinosaurs too.
             </p>
-          </div>
+          </article>
         </section>
-        <div class="iandt">
-          <div class="img-and-text image">
+        <section class="iandt">
+          <figure class="img-and-text image">
             <img
               src="Images/Exhibition/exhibition_evolution1-min.jpg"
               alt="Picture of a giant ant figure in B.C.S.M"
             />
             <p>Our Giant ant collection</p>
-          </div>
-          <div class="img-and-text image">
+          </figure>
+          <figure class="img-and-text image">
             <img
               src="Images/Exhibition/exhibition_evolution2-min.jpg"
               alt="Picture of three skeletons showing evolution of man"
             />
             <p>"Evolution in bones" exhibition"</p>
-          </div>
-          <div class="img-and-text image">
+          </figure>
+          <figure class="img-and-text image">
             <img
               src="Images/Exhibition/exhibition_evolution3-min.jpg"
               alt="Picture of three skeletons showing evolution of man"
             />
             <p>"Prehistoric marine life "</p>
-          </div>
-        </div>
-        <div class="divider dt">
+          </figure>
+        </section>
+        <figure class="divider dt">
           <img
             src="Images/Design/Biology-Skille.png"
             alt="Divider with biology icon"
             id="biology-and-medicine"
           />
           <h2>Biology and Medicine</h2>
-        </div>
+        </figure>
         <section class="iandt">
-          <div class="image-and-text">
+          <article class="image-and-text">
             <img
               src="Images/Exhibition/exhibition_biology-and-medicine1-min.jpg"
               alt="Picture of nautical biology"
@@ -174,8 +174,8 @@
               biology are offering us unique insights into the great wonders of
               the tiny world.
             </p>
-          </div>
-          <div class="image-and-text">
+          </article>
+          <article class="image-and-text">
             <img
               src="Images/Exhibition/exhibition_biology-and-medicine2-min.jpg"
               alt="Picture of a man looking into a microscope"
@@ -188,8 +188,8 @@
               breakthroughs including the discovery of penicillin and the first
               heart transplant.
             </p>
-          </div>
-          <div class="image-and-text">
+          </article>
+          <article class="image-and-text">
             <img
               src="Images/Exhibition/exhibition_biology-and-medicine3-min.jpg"
               alt="Picture of a microscopical animal"
@@ -199,42 +199,42 @@
               the lab, but also from observing animals in the wild. Often our
               fellow creatures have beat us to it.
             </p>
-          </div>
+          </article>
         </section>
-        <div class="divider dt">
+        <figure class="divider dt">
           <img
             src="Images/Design/Robotics-skille.png"
             alt="Divider with robotic arm icon"
             id="robotics-and-ai"
           />
           <h2>Robotics and AI</h2>
-        </div>
+        </figure>
         <section class="container iandt">
-          <div class="image">
+          <figure class="image">
             <img
               src="Images/Exhibition/exhibition_robots-and-ai-min.jpg"
               alt="Picture of a kid learning about robotics production"
             />
-          </div>
-          <div class="textfield-dark-green robt">
+          </figure>
+          <article class="textfield-dark-green robt">
             <p>
               The information revolution is here and robotics and artificial
               intelligence are the science of the future. From useful home
               applications of AI to industrial uses of robotics, the future is
               here. You can even say hello and shake the hand of Rob the Robot.
             </p>
-          </div>
+          </article>
         </section>
-        <div class="divider dt">
+        <figure class="divider dt">
           <img
             src="Images/Design/Ecology-skille.png"
             alt="Divider with ecology icon, a triangle with repeating arrows "
             id="ecology"
           />
           <h2>Ecology</h2>
-        </div>
+        </figure>
         <section class="iandt ecology">
-          <div class="image-and-text">
+          <article class="image-and-text">
             <img
               src="Images/Exhibition/exhibition_ecology1-min.jpg"
               alt="Picture of windmills on a snow covered mountain"
@@ -245,8 +245,8 @@
               to create a sustainable future not just for humans but for the
               whole planet.
             </p>
-          </div>
-          <div class="image-and-text">
+          </article>
+          <article class="image-and-text">
             <img
               src="Images/Exhibition/exhibition_ecology2-min.jpg"
               alt="Art in flowers spelling out: Earth Day Everyday "
@@ -257,17 +257,17 @@
               and pollution. But we also focus on the positive ways we can all
               contribute to a brighter future.
             </p>
-          </div>
+          </article>
         </section>
       </div>
-      <div class="back-to-top-button imagehov">
+      <figure class="back-to-top-button imagehov">
         <a href="#back-to-top">
           <img
             src="Images/Design/Back-to-the-top-Button.png"
             alt="Back to the top button"
           />
         </a>
-      </div>
+      </figure>
     </main>
     <footer>
       <div class="wrapper">
