--- a/explore.html
+++ b/explore.html
@@ -27,7 +27,7 @@
   <body>
     <header>
       <div class="wrapper">
-        <div class="header-section">
+        <section class="header-section">
           <div class="header-logo">
             <img
               src="Images/Design/Logo.png"
@@ -48,7 +48,7 @@
             <a href="visit.html">Visit</a>
             <a href="getinvolved.html">Get Involved</a>
           </nav>
-        </div>
+        </section>
       </div>
     </header>
     <main>
@@ -60,8 +60,8 @@
       </div>
       <h1>Explore</h1>
       <div class="wrapper">
-        <div class="explore-row">
-          <div class="explore1 image imagehov">
+        <section class="explore-row">
+          <figure class="explore1 image imagehov">
             <a href="#for-kids">
               <img
                 src="Images/Explore/explore_for_kids-min-min.png"
@@ -69,8 +69,8 @@
               />
             </a>
             <h2>Kids</h2>
-          </div>
-          <div class="explore2 image imagehov">
+          </figure>
+          <figure class="explore2 image imagehov">
             <a href="#for-teachers">
               <img
                 src="Images/Explore/explore_for_teachers-min-min.png"
@@ -78,8 +78,8 @@
               />
             </a>
             <h2>Teachers</h2>
-          </div>
-          <div class="explore3 image imagehov">
+          </figure>
+          <figure class="explore3 image imagehov">
             <a href="#for-researchers">
               <img
                 src="Images/Explore/explore_for_researchers-min-min.png"
@@ -87,38 +87,38 @@
               />
             </a>
             <h2>Researchers</h2>
-          </div>
-        </div>
+          </figure>
+        </section>
       </div>
       <section class="blue-background">
         <div class="wrapper">
-          <div class="center-text">
+          <hgroup class="center-text">
             <h2 id="for-kids">For Kids</h2>
             <h3>Are you a young person looking to learn more about science?</h3>
             <h3>Come on down to our museum, there’s plenty to see and do.</h3>
-          </div>
-          <div class="iandt">
-            <div class="img-and-text image">
+          </hgroup>
+          <section class="iandt">
+            <figure class="img-and-text image">
               <img
                 src="Images/Explore/explore_for_kids1-min.jpg"
                 alt="Picture of three potions on a table"
               />
               <p>Learn how to brew your own potions</p>
-            </div>
-            <div class="img-and-text image">
+            </figure>
+            <figure class="img-and-text image">
               <img
                 src="Images/Explore/explore_for_kids2-min.jpg"
                 alt="Picture of three potions on a table"
               />
               <p>Lots of learning activities for kids</p>
-            </div>
-            <div class="img-and-text image">
+            </figure>
+            <figure class="img-and-text image">
               <img
                 src="Images/Explore/explore_for_kids3-min.jpg"
                 alt="Picture of three potions on a table"
               />
               <p>Old Friend from the Ice Age movies</p>
-            </div>
+            </figure>
             <div class="img-and-text image">
               <img
                 src="Images/Explore/explore_for_kids4-min.jpg"
@@ -126,9 +126,9 @@
               />
               <p>“Fake snake in the lake” Exhibition</p>
             </div>
-          </div>
-          <div class="text-container">
-            <div class="textbox">
+          </section>
+          <section class="text-container">
+            <article class="textbox">
               <p>
                 You can learn about Newtonian physics from our bumper swing, or
                 why not travel back in time and meet our resident Woolly
@@ -136,17 +136,17 @@
                 interested minds, so make sure you come ready to learn and
                 explore.
               </p>
-            </div>
-            <div class="textbox">
+            </article>
+            <article class="textbox">
               <p>
                 We also have the Young Stars club which meets once a week on a
                 Saturday between 10:00 and 13:00 where you’ll get to explore and
                 experiment with our team of experts.
               </p>
-            </div>
-          </div>
+            </article>
+          </section>
           <section class="iandt">
-            <div class="image-and-text">
+            <article class="image-and-text">
               <img
                 src="Images/Explore/explore_for_kids5-min.jpg"
                 alt="Picture of a teenager painting wearing VR-glasses"
@@ -156,8 +156,8 @@
                 you can join other children your age to go on a journey of
                 discovery.
               </p>
-            </div>
-            <div class="image-and-text">
+            </article>
+            <article class="image-and-text">
               <img
                 src="Images/Explore/explore_for_kids6-min.jpg"
                 alt="Picture of three potions on a table"
@@ -166,28 +166,28 @@
                 Each holiday we pick a new theme to explore. To find out more
                 about the holiday club and how you can join, send us a message.
               </p>
-            </div>
+            </article>
           </section>
         </div>
       </section>
-      <div class="divider" id="for-teachers">
+      <figure class="divider" id="for-teachers">
         <img
           src="Images/Design/Teacher-skille.png"
           alt="Divider with teacher icon"
         />
-      </div>
+      </figure>
       <div class="center-text">
         <h2>For teachers</h2>
       </div>
       <div class="wrapper">
         <section class="container">
-          <div class="image">
+          <figure class="image">
             <img
               src="Images/Explore/explore_for_teachers1-min.jpg"
               alt="Picture showing a boy standing in one of the corridors of B.C.S.M."
             />
-          </div>
-          <div class="textfield-grey">
+          </figure>
+          <article class="textfield-grey">
             <p>
               As a community-driven museum, we want to work with schools to
               create places of learning and exploring. Our team are on hand to
@@ -200,28 +200,28 @@
               facilities and to arrange a time to bring your students through
               for a visit.
             </p>
-          </div>
+          </article>
         </section>
       </div>
-      <div class="divider" id="for-researchers">
+      <figure class="divider" id="for-researchers">
         <img
           src="Images/Design/Researcher-skille.png"
           alt="Divider with researcher icon"
         />
-      </div>
+      </figure>
       <section class="blue-background">
         <div class="wrapper">
           <div class="center-text">
             <h2>For researchers</h2>
           </div>
           <div class="iandt">
-            <div class="image">
+            <figure class="image">
               <img
                 src="Images/Explore/explore_for_researchers1-min.jpg"
                 alt="Picture of a human model with internal organs showing"
               />
-            </div>
-            <div class="text">
+            </figure>
+            <article class="text">
               <p>
                 Are you looking to get involved with our team of researchers and
                 academics? Our museum offers various ways for you to use our
@@ -229,24 +229,24 @@
                 laboratory space, and a working relationship with a number of
                 universities around the country.
               </p>
-            </div>
-            <div class="image">
+            </article>
+            <figure class="image">
               <img
                 src="Images/Explore/explore_for_researchers2-min.jpg"
                 alt="Picture of a model of a human heart"
               />
-            </div>
+            </figure>
           </div>
         </div>
       </section>
-      <div class="back-to-top-button imagehov">
+      <figure class="back-to-top-button imagehov">
         <a href="#back-to-top">
           <img
             src="Images/Design/Back-to-the-top-Button.png"
             alt="Back to the top button"
           />
         </a>
-      </div>
+      </figure>
     </main>
     <footer>
       <div class="wrapper">
