--- a/getinvolved.html
+++ b/getinvolved.html
@@ -27,7 +27,7 @@
   <body>
     <header>
       <div class="wrapper">
-        <div class="header-section">
+        <section class="header-section">
           <div class="header-logo">
             <img
               src="Images/Design/Logo.png"
@@ -48,7 +48,7 @@
             <a href="visit.html">Visit</a>
             <a href="getinvolved.html" id="active">Get Involved</a>
           </nav>
-        </div>
+        </section>
       </div>
     </header>
     <main>
@@ -62,14 +62,14 @@
       <section class="pink-background">
         <div class="wrapper">
           <h2 class="center-text">Support</h2>
-          <div class="container">
-            <div class="image">
+          <article class="container">
+            <figure class="image">
               <img
                 src="Images/Get Involved/get-involved_support-min.jpg"
                 alt="Picture of a typewriter with the word Donation printed out"
               />
-            </div>
-            <div class="text">
+            </figure>
+            <article class="text">
               <p>
                 There are various ways you can support the museum. Donations are
                 very welcome and are an important way we keep this museum open
@@ -81,15 +81,15 @@
                 you think others would enjoy, please let us know by contacting
                 our Collections Department and they will be able to assist you.
               </p>
-            </div>
-          </div>
+            </article>
+          </article>
         </div>
       </section>
       <section class="site-background">
         <div class="wrapper">
           <h2 class="center-text">Volunteer</h2>
-          <div class="container">
-            <div class="text">
+          <article class="container">
+            <article class="text">
               <p>
                 A number of people volunteer their time and effort to keep the
                 displays in good order and ready for visitors to come and enjoy.
@@ -103,27 +103,27 @@
                 contact us if you’d like to find out more about how you can get
                 involved.
               </p>
-            </div>
-            <div class="image">
+            </article>
+            <figure class="image">
               <img
                 src="Images/Get Involved/get-involved_volunteer-min.jpg"
                 alt="Picture of a man standing in front of a dinosaur exhibition"
               />
-            </div>
-          </div>
+            </figure>
+          </article>
         </div>
       </section>
       <section class="pink-background">
         <div class="wrapper">
           <h2 class="center-text">Internships</h2>
-          <div class="container">
-            <div class="image">
+          <article class="container">
+            <figure class="image">
               <img
                 src="Images/Get Involved/get-involved_interns-min.jpg"
                 alt="Picture of 5 people sitting on a bench and smiling with their hands around each other"
               />
-            </div>
-            <div class="text">
+            </figure>
+            <article class="text">
               <p>
                 Are you interested in working in a museum? Do you enjoy the fun
                 and excitement of sharing the wonders of nature with people?
@@ -135,18 +135,18 @@
                 people who are passionate about science and sharing it with the
                 wider community.
               </p>
-            </div>
-          </div>
+            </article>
+          </article>
         </div>
       </section>
-      <div class="back-to-top-button imagehov">
+      <figure class="back-to-top-button imagehov">
         <a href="#back-to-top">
           <img
             src="Images/Design/Back-to-the-top-Button.png"
             alt="Back to the top button"
           />
         </a>
-      </div>
+      </figure>
     </main>
     <footer>
       <div class="wrapper">
