--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
   <body>
     <header>
       <div class="wrapper">
-        <div class="header-section">
-          <div class="header-logo">
+        <section class="header-section">
+          <figure class="header-logo">
             <img
               src="Images/Design/Logo.png"
               alt="Logo for Brønnøysund Community Science Museum"
             />
-          </div>
+          </figure>
           <input type="checkbox" id="menu-checkbox" />
           <label for="menu-checkbox" class="hamburger-icon"
             ><img
@@ -48,7 +48,7 @@
             <a href="visit.html">Visit</a>
             <a href="getinvolved.html">Get Involved</a>
           </nav>
-        </div>
+        </section>
       </div>
     </header>
     <main>
@@ -61,13 +61,13 @@
       <h1>Brønnøysund Community Science Museum</h1>
       <div class="wrapper">
         <section class="container">
-          <div class="image">
+          <figure class="image">
             <img
               src="Images/Home/home_museum-min.jpg"
               alt="Picture showing the museum sign of B.C.S.M."
             />
-          </div>
-          <div class="textfield-purple">
+          </figure>
+          <article class="textfield-purple">
             <p>
               Over the course of human history, science has developed from our
               early understanding of fire, wind, water, and earth to exploring
@@ -80,7 +80,7 @@
               a lifelong passion to continue the exploration of the world around
               us.
             </p>
-          </div>
+          </article>
         </section>
         <h2 class="h2-center">"Explore Together</h2>
         <section class="link-row imagehov">
@@ -125,24 +125,24 @@
             <a href="visit.html" class="cta">Find out more</a>
           </div>
         </section>
-        <div class="divider">
+        <figure class="divider">
           <img
             src="Images/Design/Home-skille.png"
             alt="Divider for the home page"
           />
-        </div>
+        </figure>
         <h3 class="center-text">
           Come join us at the Community Science Museum where we are committed to
           making science accessible to all.
         </h3>
         <section class="container">
-          <div class="image">
+          <figure class="image">
             <img
               src="Images/Home/home_boy-in-museum-min.jpg"
               alt="Picture showing a boy standing in one of the corridors of B.C.S.M."
             />
-          </div>
-          <div class="textfield-purple">
+          </figure>
+          <article class="textfield-purple">
             <p>
               We believe science should not be confined to the textbook, but
               brought to life through exhibits. This is why we have over 1000
@@ -152,16 +152,16 @@
               dinosaur exhibits – they only come to life at night when
               everyone’s gone home).
             </p>
-          </div>
+          </article>
         </section>
-        <div class="back-to-top-button imagehov">
+        <figure class="back-to-top-button imagehov">
           <a href="#back-to-top">
             <img
               src="Images/Design/Back-to-the-top-Button.png"
               alt="Back to the top button"
             />
           </a>
-        </div>
+        </figure>
       </div>
     </main>
     <footer>
