--- a/visit.html
+++ b/visit.html
@@ -27,7 +27,7 @@
   <body>
     <header>
       <div class="wrapper">
-        <div class="header-section">
+        <section class="header-section">
           <div class="header-logo">
             <img
               src="Images/Design/Logo.png"
@@ -48,7 +48,7 @@
             <a href="visit.html" id="active">Visit</a>
             <a href="getinvolved.html">Get Involved</a>
           </nav>
-        </div>
+        </section>
       </div>
     </header>
     <main>
@@ -61,14 +61,14 @@
       <h1>Visit</h1>
       <div class="wrapper">
         <section class="iandt visit">
-          <div class="textfield-blue location">
+          <address class="textfield-blue location">
             <h2>Location</h2>
             <p>The museum is located at:</p>
             <span>Fictional Street 1</span>
             <span>8907 Brønnøysund</span>
             <span>NO-Norway</span>
-          </div>
-          <div class="textfield-blue admission">
+          </address>
+          <article class="textfield-blue admission">
             <h2>Admission</h2>
             <p>
               The entrance is free for all. There are guided tours of the museum
@@ -79,8 +79,8 @@
               If you would like to organise a guided tour for your group of 6 or
               more people, please contact us to arrange the tour.
             </p>
-          </div>
-          <div class="textfield-blue hours">
+          </article>
+          <article class="textfield-blue hours">
             <h2>Hours</h2>
             <span>Monday: Closed</span>
             <span>Tuesday: 10:00 – 16:00</span>
@@ -89,16 +89,16 @@
             <span>Friday: 10:00 – 19:00</span>
             <span>Saturday: 9:00 – 16:00</span>
             <span>Sunday: 9:00 – 13:00</span>
-          </div>
+          </article>
         </section>
-        <div class="divider">
+        <figure class="divider">
           <img
             src="Images/Design/Cafe-skille.png"
             alt="Divider with a dinosaur scull icon"
           />
-        </div>
+        </figure>
         <section class="visit-iandt">
-          <div class="image-and-text">
+          <article class="image-and-text">
             <h2>Accessibility</h2>
             <img
               src="Images/Visit/visit_accessibility-min.jpg"
@@ -108,8 +108,8 @@
               The museum has wheelchair accessibility ramps. It also has audio
               guides and braille display signs for the visually impaired.
             </p>
-          </div>
-          <div class="image-and-text">
+          </article>
+          <article class="image-and-text">
             <h2>Food and drink</h2>
             <img
               src="Images/Visit/visit_food-and-drink-min.jpg"
@@ -119,8 +119,8 @@
               There is a café attached to the museum where you can get light
               lunches, soft drinks, coffee, snacks and more.
             </p>
-          </div>
-          <div class="image-and-text">
+          </article>
+          <article class="image-and-text">
             <h2>Shop</h2>
             <img
               src="Images/Visit/visit_shop-min.jpg"
@@ -131,15 +131,15 @@
               great gifts and activity packs that allow you to continue to
               explore science even after you’ve left the museum.
             </p>
-          </div>
+          </article>
         </section>
-        <div class="divider dt">
+        <figure class="divider dt">
           <img
             src="Images/Design/Contact-Skille.png"
             alt="Divider with a contact icon"
           />
           <h2>Contact</h2>
-        </div>
+        </figure>
         <h3 class="center-text">
           Please contact us if you have any questions or feedback
         </h3>
@@ -200,14 +200,14 @@
           </div>
         </form>
       </div>
-      <div class="back-to-top-button imagehov">
+      <figure class="back-to-top-button imagehov">
         <a href="#back-to-top">
           <img
             src="Images/Design/Back-to-the-top-Button.png"
             alt="Back to the top button"
           />
         </a>
-      </div>
+      </figure>
     </main>
     <footer>
       <div class="wrapper">
