--- a/exhibition.html
+++ b/exhibition.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Brønnøysund Community Science Museum has a lot of exhibitions ranging from cosmology to ecology. We are certain you will find a exhibition that suits your interests."
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -22,6 +26,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="../css/styles.css" />
+    <link rel="icon" href="Images/Icons/home-icon.png" />
     <title>B.C.S.M | Exhibitions</title>
   </head>
   <body>
