--- a/explore.html
+++ b/explore.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Brønnøysund Community Science Museum has something for everyone. For the kids, we have large areas with activities and games. We can also offer teachers tailor-made learning packages for all age levels. Researchers will also be able to contact us for use of the museum's equipment."
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -22,6 +26,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="../css/styles.css" />
+    <link rel="icon" href="Images/Icons/home-icon.png" />
     <title>B.C.S.M | Explore</title>
   </head>
   <body>
