--- a/getinvolved.html
+++ b/getinvolved.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Get involved with Brønnøysund Community Science Museum by supporting us with donations. Apply for internship or volunteer to help out in any way you can."
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -22,6 +26,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="../css/styles.css" />
+    <link rel="icon" href="Images/Icons/home-icon.png" />
     <title>B.C.S.M | GetInvolved</title>
   </head>
   <body>
