--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content=" Welcome to Brønnøysund Community Science Museum. Our motto is Explore Together, and in our museum there is things to do and exhibitions to see for all age groups."
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -22,6 +26,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="../css/styles.css" />
+    <link rel="icon" href="Images/Icons/home-icon.png" />
     <title>B.C.S.M | Homepage</title>
   </head>
   <body>
