--- a/events.html
+++ b/events.html
@@ -107,12 +107,12 @@
             </figure>
             <article class="text">
               <h3>Energetica Exhibition on Loan</h3>
-              <p>On loan from the NEMO Science Museum in Amsterdam, the Energetica exhibition is coming to the Community Science Museum. It’s a series of installations that allow visitors to experience the power of the elements as we harness them. From solar energy powering lighting, to ‘Wind Island’ that shows how turbines are able to use and control wind to create power.</p>
+              <p>On loan from the NEMO Science Museum in Amsterdam, the Energetica exhibition is coming to the Community Science Museum. It's a series of installations that allow visitors to experience the power of the elements as we harness them. From solar energy powering lighting, to ‘Wind Island’ that shows how turbines are able to use and control wind to create power.</p>
             </article>
           </div>
         </div>
       </section>
-        <figure class="back-to-top-button imagehov"> 
+        <figure class="back-to-top-button imagehover"> 
           <a href="#back-to-top">
             <img
               src="Images/Design/Back-to-the-top-Button.png"
