--- a/exhibition.html
+++ b/exhibition.html
@@ -95,13 +95,13 @@
             <p>
               Explore the wonders of our cosmos. Our fantastic exhibition, ‘The
               Sky Above Us’, explores the night sky and what we can see and know
-              about the universe around us. We’ll locate the various
+              about the universe around us. We'll locate the various
               constellations and galaxies that can be seen and learn a bit about
               the early navigators who used the stars to travel by.
             </p>
             <p>
               Follow the journey of our solar exploration: from early Arab
-              traders, to Galileo’s telescope, to the latest exploration of the
+              traders, to Galileo's telescope, to the latest exploration of the
               planets in our solar system.
             </p>
           </article>
@@ -132,7 +132,7 @@
             <p>
               Discover the origins of life on this planet and how the species we
               know today have evolved our time. You can also take some time to
-              meet a few of the creatures who didn’t survive, including our
+              meet a few of the creatures who didn't survive, including our
               Woolly Mammoth, the Dodos, and a number of dinosaurs too.
             </p>
           </article>
@@ -265,7 +265,7 @@
           </article>
         </section>
       </div>
-      <figure class="back-to-top-button imagehov">
+      <figure class="back-to-top-button imagehover">
         <a href="#back-to-top">
           <img
             src="Images/Design/Back-to-the-top-Button.png"
