--- a/explore.html
+++ b/explore.html
@@ -66,7 +66,7 @@
       <h1>Explore</h1>
       <div class="wrapper">
         <section class="explore-row">
-          <figure class="explore1 image imagehov">
+          <figure class="explore1 image imagehover">
             <a href="#for-kids">
               <img
                 src="Images/Explore/explore_for_kids-min-min.png"
@@ -75,7 +75,7 @@
             </a>
             <h2>Kids</h2>
           </figure>
-          <figure class="explore2 image imagehov">
+          <figure class="explore2 image imagehover">
             <a href="#for-teachers">
               <img
                 src="Images/Explore/explore_for_teachers-min-min.png"
@@ -84,7 +84,7 @@
             </a>
             <h2>Teachers</h2>
           </figure>
-          <figure class="explore3 image imagehov">
+          <figure class="explore3 image imagehover">
             <a href="#for-researchers">
               <img
                 src="Images/Explore/explore_for_researchers-min-min.png"
@@ -100,7 +100,7 @@
           <hgroup class="center-text">
             <h2 id="for-kids">For Kids</h2>
             <h3>Are you a young person looking to learn more about science?</h3>
-            <h3>Come on down to our museum, there’s plenty to see and do.</h3>
+            <h3>Come on down to our museum, there's plenty to see and do.</h3>
           </hgroup>
           <section class="iandt">
             <figure class="img-and-text image">
@@ -145,7 +145,7 @@
             <article class="textbox">
               <p>
                 We also have the Young Stars club which meets once a week on a
-                Saturday between 10:00 and 13:00 where you’ll get to explore and
+                Saturday between 10:00 and 13:00 where you'll get to explore and
                 experiment with our team of experts.
               </p>
             </article>
@@ -244,7 +244,7 @@
           </div>
         </div>
       </section>
-      <figure class="back-to-top-button imagehov">
+      <figure class="back-to-top-button imagehover">
         <a href="#back-to-top">
           <img
             src="Images/Design/Back-to-the-top-Button.png"
